move the board and input controls to a two column layout

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    </head>
+<link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>    </head>
   <body>
     <div class="jumbotron">
       <div class="container">
@@ -42,261 +41,257 @@
       </div>
     </div>
     <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <h2 class="header">Upload a text file to play Bingo</h2>
+          <label class="file">
+            <input type="file" id="file-input">
+            <a class="btn btn-success btn-lg" role="button" id="start-button">Play now!</a>
+          </label>
+        </div>
+        <div class="col-md-9">
+          <div class ="row board">
+            <h2>Bingo Board</h2>
+            <div class="row">
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="0" data-value='0'>
 
-      <h1 class="header">Upload a text file to play Bingo</h1>
-      <div class="text-file">
-         <div class="select">
-         Select a text file:
-       </div>
-       <label class="file">
-         <input type="file" id="file-input">
-         <a class="btn btn-success btn-lg" role="button" id="start-button">Play now!</a>
-       </label>
-      </div>
-    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="1" data-value='0'>
 
-    <div class="container">
-      <div class="board-background" id="bingo-man"><div>
-        <div class ="row board">
-          <h2>Bingo Board</h2>
-          <div class="row">
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="0" data-value='0'>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="2" data-value='0'>
 
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="3" data-value='0'>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="4" data-value='0'>
+
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="1" data-value='0'>
+            <div class="row">
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="5" data-value='0'>
 
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="6" data-value='0'>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="7" data-value='0'>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="8" data-value='0'>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="9" data-value='0'>
+
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="2" data-value='0'>
+            <div class="row">
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="10" data-value='0'>
 
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="11" data-value='0'>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="12" data-value='0'>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="13" data-value='0'>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="14" data-value='0'>
+
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="3" data-value='0'>
+            <div class="row">
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="15" data-value='0'>
 
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="16" data-value='0'>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="17" data-value='0'>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="18" data-value='0'>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="19" data-value='0'>
+
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="4" data-value='0'>
+            <div class="row">
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="20" data-value='0'>
 
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="5" data-value='0'>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="21" data-value='0'>
 
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="6" data-value='0'>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="22" data-value='0'>
 
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="7" data-value='0'>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="23" data-value='0'>
 
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="8" data-value='0'>
+              <div class="square">
+                <div class="content">
+                  <div class="table">
+                    <div class="table-cell" id="24" data-value='0'>
 
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="9" data-value='0'>
 
-                  </div>
-                </div>
-              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="10" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="11" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="12" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="13" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="14" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="15" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="16" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="17" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="18" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="19" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="20" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="21" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="22" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="23" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="square">
-              <div class="content">
-                <div class="table">
-                  <div class="table-cell" id="24" data-value='0'>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-
           </div>
         </div>
       </div>
+    </div>
 
 
     <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
