replace content in modal window

--- a/index.html
+++ b/index.html
@@ -43,18 +43,17 @@
     </div>
     <div class="container">
       <div class="row">
-        <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
-          <div class="modal-dialog">
+        <div id="myModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog">
+          <div class="modal-dialog modal-sm">
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-
+                <h2>BINGO!</h2>
               </div>
               <div class="modal-body">
-                <p>Congratulations!
-                <img id="modalImage" src="img/bingowin.jpeg" alt="bingo win" />
-                BINGO! Load another list to play again.</p>
-
+                <p class="lead">
+                  Great job!  You got five in a row.  To play again, use the reset button to the right and then select a new file.
+                </p>
               </div>
 
             </div><!-- /.modal-content -->
