modify page layout

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
+    <link href="css/mediaqueries.css" rel="stylesheet" media="mediatype and|not|only (media feature)">    
     <link href="css/styles.css" rel="stylesheet">
 
     <!-- Jquery JS -->
@@ -31,7 +32,7 @@
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 </head>
   <body>
 
@@ -62,7 +63,7 @@
         </div><!-- /.modal -->
       </div>
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-12">
           <div class="speech">
             <h2 class="header">Upload a text file to play Bingo</h2>
             <label class="file">
@@ -70,8 +71,6 @@
             </label>
           </div>
           <button id="new-game" type="button" class="btn btn-success btn-lg">Reset</button>
-        </div>
-        <div class="col-md-10">
           <div class ="board">
             <div class="row">
               <div class="square">
@@ -309,7 +308,7 @@
               </div>
             </div>
           </div>
-
+        </div>
         </div>
       </div>
     </div>
